--- a/uno/Nova.html
+++ b/uno/Nova.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script>
-  var data = '[{"name": "filip", "prezime": "cvetanov","adresa": "cvetanov.filip@gmail.com","godini": 20,"pol": "male","grad": "zasle"},{"name": "tamara","prezime": "cvetanov","adresa": "cvetanova.tami69@gmail.com","godini": 12,"pol": "female","grad": "kumanovsko"}]'
+  var data = '[{"name": "filip", "prezime": "cvetanov","adresa": "cvetanov.filip@gmail.com","godini": 20,"pol": "male","grad": "zasle"},{"name": "riki","prezime": "cvetanov","adresa": "cvetanova.riki50@gmail.com","godini": 12,"pol": "female","grad": "kumanovsko"}]'
   var newData=JSON.parse(data)
  window.onload=function(){
     for (let i=0;i<newData.length;i++){
